--- a/datasets/mapping.yml
+++ b/datasets/mapping.yml
@@ -1,113 +1,112 @@
-Insert Company_News__c:
+Insert appyback__Company_News__c:
   sf_object: appyback__Company_News__c
-  table: Company_News__c
+  table: appyback__Company_News__c
   fields:
     Id: sf_id
-    Date_Posted__c: appyback__Date_Posted__c
-    Description__c: appyback__Description__c
-    Headline__c: appyback__Headline__c
-    News_Type__c: appyback__News_Type__c
-    Public__c: appyback__Public__c
     RecordTypeId: RecordTypeId
-    Status__c: appyback__Status__c
-Insert Medical__c:
+    appyback__Date_Posted__c: appyback__Date_Posted__c
+    appyback__Description__c: appyback__Description__c
+    appyback__Headline__c: appyback__Headline__c
+    appyback__News_Type__c: appyback__News_Type__c
+    appyback__Public__c: appyback__Public__c
+    appyback__Status__c: appyback__Status__c
+Insert appyback__Medical__c:
   sf_object: appyback__Medical__c
-  table: Medical__c
+  table: appyback__Medical__c
   fields:
     Id: sf_id
-    Covid_19__c: appyback__Covid_19__c
-    End_Date__c: appyback__End_Date__c
-    End_Illness_Certificate__c: appyback__End_Illness_Certificate__c
-    MD_Name__c: appyback__MD_Name__c
-    Start_Date__c: appyback__Start_Date__c
-Insert Location__c:
+    appyback__Covid_19__c: appyback__Covid_19__c
+    appyback__End_Date__c: appyback__End_Date__c
+    appyback__End_Illness_Certificate__c: appyback__End_Illness_Certificate__c
+    appyback__MD_Name__c: appyback__MD_Name__c
+    appyback__Start_Date__c: appyback__Start_Date__c
+Insert appyback__Location__c:
   sf_object: appyback__Location__c
-  table: Location__c
+  table: appyback__Location__c
   fields:
     Id: sf_id
     Name: Name
-    City__c: appyback__City__c
-    Country__c: appyback__Country__c
-    Expected_Open_Date__c: appyback__Expected_Open_Date__c
-    Gloves_quantity__c: appyback__Gloves_quantity__c
-    Location_Close_Date__c: appyback__Location_Close_Date__c
-    Location_Phone__c: appyback__Location_Phone__c
-    Location_Type__c: appyback__Location_Type__c
-    Mask_quantity__c: appyback__Mask_quantity__c
-    Ongoing_Issues__c: appyback__Ongoing_Issues__c
-    Operating_Hours__c: appyback__Operating_Hours__c
-    State_Region__c: appyback__State_Region__c
-    Status__c: appyback__Status__c
-    Street_Address__c: appyback__Street_Address__c
-    Street_Address__c: appyback__Street_Address__c
-    ZIP_Code__c: appyback__ZIP_Code__c
-Insert Location_Daily_Info__c:
+    appyback__City__c: appyback__City__c
+    appyback__Country__c: appyback__Country__c
+    appyback__Expected_Open_Date__c: appyback__Expected_Open_Date__c
+    appyback__Gloves_quantity__c: appyback__Gloves_quantity__c
+    appyback__Location_Close_Date__c: appyback__Location_Close_Date__c
+    appyback__Location_Phone__c: appyback__Location_Phone__c
+    appyback__Location_Type__c: appyback__Location_Type__c
+    appyback__Mask_quantity__c: appyback__Mask_quantity__c
+    appyback__Ongoing_Issues__c: appyback__Ongoing_Issues__c
+    appyback__Operating_Hours__c: appyback__Operating_Hours__c
+    appyback__State_Region__c: appyback__State_Region__c
+    appyback__Status__c: appyback__Status__c
+    appyback__Street_Address__c: appyback__Street_Address__c
+    appyback__ZIP_Code__c: appyback__ZIP_Code__c
+Insert appyback__Location_Daily_Info__c:
   sf_object: appyback__Location_Daily_Info__c
-  table: Location_Daily_Info__c
+  table: appyback__Location_Daily_Info__c
   fields:
     Id: sf_id
-    Date__c: appyback__Date__c
-    Number_of_Sanifications__c: appyback__Number_of_Sanifications__c
-    Reserved_Daily_Seats__c: appyback__Reserved_Daily_Seats__c
-    Seats_Available_Afternoon__c: appyback__Seats_Available_Afternoon__c
-    Seats_Available_Morning__c: appyback__Seats_Available_Morning__c
-    Total_Seats_Afternoon__c: appyback__Total_Seats_Afternoon__c
-    Total_Seats_Morning__c: appyback__Total_Seats_Morning__c
+    appyback__Date__c: appyback__Date__c
+    appyback__Number_of_Sanifications__c: appyback__Number_of_Sanifications__c
+    appyback__Reserved_Daily_Seats__c: appyback__Reserved_Daily_Seats__c
+    appyback__Seats_Available_Afternoon__c: appyback__Seats_Available_Afternoon__c
+    appyback__Seats_Available_Morning__c: appyback__Seats_Available_Morning__c
+    appyback__Total_Seats_Afternoon__c: appyback__Total_Seats_Afternoon__c
+    appyback__Total_Seats_Morning__c: appyback__Total_Seats_Morning__c
   lookups:
-    Location__c:
-      table: Location__c
-Insert Location_Administration__c:
+    appyback__Location__c:
+      table: appyback__Location__c
+Insert appyback__Location_Administration__c:
   sf_object: appyback__Location_Administration__c
-  table: Location_Administration__c
+  table: appyback__Location_Administration__c
   fields:
     Id: sf_id
-    End_Date__c: appyback__End_Date__c
-    Number_of_Sanification__c: appyback__Number_of_Sanification__c
-    Reserved_Seats__c: appyback__Reserved_Seats__c
-    Start_Date__c: appyback__Start_Date__c
-    Status__c: appyback__Status__c
-    Total_Seats_Afternoon__c: appyback__Total_Seats_Afternoon__c
-    Total_Seats_Morning__c: appyback__Total_Seats_Morning__c
+    appyback__End_Date__c: appyback__End_Date__c
+    appyback__Number_of_Sanification__c: appyback__Number_of_Sanification__c
+    appyback__Reserved_Seats__c: appyback__Reserved_Seats__c
+    appyback__Start_Date__c: appyback__Start_Date__c
+    appyback__Status__c: appyback__Status__c
+    appyback__Total_Seats_Afternoon__c: appyback__Total_Seats_Afternoon__c
+    appyback__Total_Seats_Morning__c: appyback__Total_Seats_Morning__c
   lookups:
-    Location__c:
-      table: Location__c
-Insert Employee_Request__c:
+    appyback__Location__c:
+      table: appyback__Location__c
+Insert appyback__Employee_Request__c:
   sf_object: appyback__Employee_Request__c
-  table: Employee_Request__c
+  table: appyback__Employee_Request__c
   fields:
     Id: sf_id
-    Approved_Date__c: appyback__Approved_Date__c
-    Approved__c: appyback__Approved__c
-    Business_Critical__c: appyback__Business_Critical__c
-    Denied_Checkin_Reason__c: appyback__Denied_Checkin_Reason__c
-    Description_of_Request__c: appyback__Description_of_Request__c
-    Executive_Approval_Needed__c: appyback__Executive_Approval_Needed__c
-    Gloves__c: appyback__Gloves__c
-    High_Risk_Zone__c: appyback__High_Risk_Zone__c
-    Mask__c: appyback__Mask__c
-    Privacy_Policy__c: appyback__Privacy_Policy__c
-    Reason_for_Request__c: appyback__Reason_for_Request__c
-    Rejection_Reason__c: appyback__Rejection_Reason__c
-    Requested_Date__c: appyback__Requested_Date__c
-    Requested_Slot__c: appyback__Requested_Slot__c
-    Self_Quarantined__c: appyback__Self_Quarantined__c
-    Status__c: appyback__Status__c
-    Temperature_Self_check__c: appyback__Temperature_Self_check__c
-    Temperature__c: appyback__Temperature__c
+    appyback__Approved_Date__c: appyback__Approved_Date__c
+    appyback__Approved__c: appyback__Approved__c
+    appyback__Business_Critical__c: appyback__Business_Critical__c
+    appyback__Denied_Checkin_Reason__c: appyback__Denied_Checkin_Reason__c
+    appyback__Description_of_Request__c: appyback__Description_of_Request__c
+    appyback__Executive_Approval_Needed__c: appyback__Executive_Approval_Needed__c
+    appyback__Gloves__c: appyback__Gloves__c
+    appyback__High_Risk_Zone__c: appyback__High_Risk_Zone__c
+    appyback__Mask__c: appyback__Mask__c
+    appyback__Privacy_Policy__c: appyback__Privacy_Policy__c
+    appyback__Reason_for_Request__c: appyback__Reason_for_Request__c
+    appyback__Rejection_Reason__c: appyback__Rejection_Reason__c
+    appyback__Requested_Date__c: appyback__Requested_Date__c
+    appyback__Requested_Slot__c: appyback__Requested_Slot__c
+    appyback__Self_Quarantined__c: appyback__Self_Quarantined__c
+    appyback__Status__c: appyback__Status__c
+    appyback__Temperature_Self_check__c: appyback__Temperature_Self_check__c
+    appyback__Temperature__c: appyback__Temperature__c
   lookups:
-    Location_Booking__c:
-      table: Location_Daily_Info__c
-    Location__c:
-      table: Location__c
-Insert Sanitization__c:
+    appyback__Location_Booking__c:
+      table: appyback__Location_Daily_Info__c
+    appyback__Location__c:
+      table: appyback__Location__c
+Insert appyback__Sanitization__c:
   sf_object: appyback__Sanitization__c
-  table: Sanitization__c
+  table: appyback__Sanitization__c
   fields:
     Id: sf_id
-    Sanitization_DateTime__c: appyback__Sanitization_DateTime__c
-    Sanitization_Date__c: appyback__Sanitization_Date__c
+    appyback__Sanitization_DateTime__c: appyback__Sanitization_DateTime__c
+    appyback__Sanitization_Date__c: appyback__Sanitization_Date__c
   lookups:
-    Location__c:
-      table: Location__c
-    Location_sanitization__c:
-      table: Location_Daily_Info__c
+    appyback__Location__c:
+      table: appyback__Location__c
+    appyback__Location_sanitization__c:
+      table: appyback__Location_Daily_Info__c
