--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -113,4 +113,4 @@ plans:
         tier: primary
         steps:
             1:
-               flow: install_prod 
+               flow: setup_Sust_Cloud_dev 
